a few more questions